@@ -1,5 +1,3 @@
-//compile javac --module-path javafx-sdk-11.0.2/lib --add-modules=javafx.controls Caesar_Cipher.java
-//java --module-path javafx-sdk-11.0.2/lib --add-modules=javafx.controls Caesar_Cipher
 import javafx.application.Application;
 import javafx.geometry.Pos;
 import javafx.scene.Scene;
